contrast fixed and category dropdown

--- a/code/src/app/profile/profile.css
+++ b/code/src/app/profile/profile.css
@@ -1,10 +1,6 @@
 .row {
-    
-  /* border-color: red;
-  border-width: 2px; */
   width: 100%;
   top:0px;
-  /* padding:10%; */
 }
 .row:after {
   content: "";
@@ -14,21 +10,12 @@
 
 .column-left {
   width: 40%;
-  /* background-color: white;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
   padding: 20px;
   float: left;
-/* 
-  border-color: rgb(255, 147, 165);
-  border-width: 5px; */
 }
 
 .column-right {
   width: 60%;
-  /* background-color: white;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);*/
   padding: 20px;
   float: left; 
 }
@@ -39,9 +26,6 @@ img {
   padding: 50px;
   display:block;
   margin:auto;
-
-  /* border-color: blue;
-  border-width: 2px; */
 }
 
 .amount {
@@ -52,32 +36,30 @@ img {
   color: black;
 }
 
-input, select {
-  background-color: #FF9BD1; 
+
+input, select, .goal-input {
+  background-color: transparent;
   color: white;
   padding: 0.4rem 1.5rem;
+  border: 2px solid #FF9BD1; 
   border-radius: 0.5rem;
-  transition: background-color 0.3s;
   width: auto;
   display: inline-block;
   margin: 0.5em;
   justify-content: center;
   align-items: center;
+  font-size: 16px;
+
+  /* gradient fade effect */
+  background-image: radial-gradient(circle, transparent 10%, #FF9BD1 140%);
+  background-size: 100% 100%;
+  background-position: center;
+  transition: background-color 0.5s ease-in-out;
 }
 
-.goal-input {
-  background-color: #FF9BD1; 
-  color: white;
-  padding: 0.4rem 0.8rem;
-  border-radius: 0.5rem;
-  transition: background-color 0.3s;
-  width: min-content;
-  display: inline-block;
-  margin: 0.5em;
-  justify-content: center;
-  align-items: center;
+input:focus {
+  background-image: radial-gradient(circle, transparent 10%, #FF9BD1 120%);
 }
-
 
 .profileSection {
   padding: 30px;
